Performance Tests not working correctly JDK 21 doesn't suppor Ilegal access on memory. Incompatibility with parboiled-core 1.4.1