@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <config.files.dir>${basedir}/src/main/resources</config.files.dir>
     <jersey.version>2.35</jersey.version>
     <server.hostname>0.0.0.0</server.hostname>
@@ -33,12 +33,18 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>org.parboiled</groupId>
+        <artifactId>parboiled-java</artifactId>
+        <version>1.4.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
   <dependencies>
     <!--DEPENDENCIAS
     PARA JERSEY, DATANUCLEUS Y MYSQL-->
+
     <dependency>
       <groupId>org.datanucleus</groupId>
       <artifactId>javax.jdo</artifactId>
@@ -126,7 +132,7 @@
     <dependency>
       <groupId>org.databene</groupId>
       <artifactId>contiperf</artifactId>
-      <version>2.3.4</version>
+      <version>2.2.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -239,8 +245,19 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0</version>
           <configuration>
+            <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+              --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+            </argLine>
             <excludedGroups>categories.IntegrationTest, categories.PerformanceTest</excludedGroups>
           </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>3.0.0-M7</version>
         </plugin>
 
       </plugins>
@@ -304,7 +321,6 @@
         <plugins>
           <plugin>
             <artifactId>maven-failsafe-plugin</artifactId>
-            <version>2.22.0</version>
             <configuration>
               <includes>
                 <include>**/*</include>
@@ -331,7 +347,6 @@
         <plugins>
           <plugin>
             <artifactId>maven-failsafe-plugin</artifactId>
-            <version>2.22.0</version>
             <configuration>
               <includes>
                 <include>**/*</include>
